// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Editor Node List component 1`] = `
<div>
  <div
    className="text-chunk obojobo-draft--chunks--list pad"
  />
</div>
`;

exports[`List Editor Node List component when selected 1`] = `
<div>
  <div
    className="text-chunk obojobo-draft--chunks--list pad"
  >
    <div
      className="buttonbox-box"
      contentEditable={false}
    >
      <div
        className="box-border"
      >
        <div
          className="obojobo-draft--components--button alt-action is-not-dangerous align-center toggle-header"
        >
          <button
            className="button"
            contentEditable={false}
            onClick={[Function]}
          >
            Switch to ordered
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
